--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -8,7 +13,17 @@
 </head>
 <body>
     <header>
+        <div class="menu_wrapper">
+            <a href="#">Home</a>
+            <a href="#">University</a>
+            <a href="#">Courses</a>
+        </div>
         <img src="img/logo-baner.png" alt="">
+        <div class="menu_wrapper">
+            <a href="#">Use cases</a>
+            <a href="#">Plans</a>
+            <a href="#">Resources</a>
+        </div>
     </header>
 </body>
 </html>
