section nft self

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
@@ -25,5 +29,19 @@
             <a href="#">Resources</a>
         </div>
     </header>
+
+   <!--section__sellNft start-->
+    <section class="section__sellNft">
+        <div class="sellNft__bg"></div>
+        <h1>Landing page<br>template</h1>
+        <p>Velit, odio bibendum eu, viverra sit laoreet posuere.
+             Ut scelerisque posuere massa amet.
+             Ornare<br>lacinia vitae at vestibulum morbi. 
+             Volutpat libero curabitur feugiat risus dui pulvinar.
+              Elementum.</p>
+        <button>Let`s sell</button>
+    </section>
+
+     <!--section__sellNft start-->
 </body>
 </html>
