our team section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
    <!--section__sellNft start-->
     <section class="section__sellNft">
         <div class="sellNft__bg"></div>
+        <img class="sellNft__img1" src="./img/section__sellNft/1.png">
+        <img class="sellNft__img2" src="./img/section__sellNft/2.png">
+        <img class="sellNft__img3" src="./img/section__sellNft/3.png">
+        <img class="sellNft__img4" src="./img/section__sellNft/4.png"> 
         <h1>Landing page<br>template</h1>
         <p>Velit, odio bibendum eu, viverra sit laoreet posuere.
              Ut scelerisque posuere massa amet.
@@ -41,7 +45,54 @@
               Elementum.</p>
         <button>Let`s sell</button>
     </section>
+    <!--section__sellNft end-->
 
-     <!--section__sellNft start-->
+    <!--section__partners start-->
+    <section class="section__partners">
+        <div class="vraper">
+            <img src="/img/section__partners/1.svg" alt="">
+            <img src="/img/section__partners/2.svg" alt="">
+            <img src="/img/section__partners/3.svg" alt="">
+            <img src="/img/section__partners/4.svg" alt="">
+            <img src="/img/section__partners/27.svg" alt="">
+            <img src="/img/section__partners/28.svg" alt="">
+        </div>
+    </section>
+    <!--section__partners end-->
+
+    <!--section__team start-->
+    <section class="section__team">
+        <h2>Our Team</h2>
+        <h3>Rules combo id odio turpis pharetrum elementum
+            Rules combo id odio turpis pharetrum elementum
+            Rules combo<br> id odio turpis pharetrum elementum
+            Rules combo id odio turpis pharetrum elementum
+        </h3>
+        <div class="wrapper">
+            <div class="team__wrapper">
+                <img src="./img/section__team/2.png" alt="">
+                <p>Guy Hawkins</p>
+                <span>CEO</span>
+            </div>
+            <div class="team__wrapper">
+                <img src="./img/section__team/1.png" alt="">
+                <p>Jane Cooper</p>
+                <span>COO</span>
+            </div>
+            <div class="team__wrapper">
+                <img src="./img/section__team/3.png" alt="">
+                <p>Darrel Steward</p>
+                <span>CTO</span>
+            </div>
+            <div class="team__wrapper">
+                <img src="./img/section__team/4.png" alt="">
+                <p>Diane Russel</p>
+                <span>CDO</span>
+            </div>
+        </div>
+    </section>
+    <!--section__team end-->
+
+     
 </body>
 </html>
