--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 
     <!--section__team start-->
     <section class="section__team">
-        <h2>Our Team</h2>
-        <h3>Rules combo id odio turpis pharetrum elementum
+        <div class="nft_h2">Our Team</div>
+        <div class="nft_h3">Rules combo id odio turpis pharetrum elementum
             Rules combo id odio turpis pharetrum elementum
             Rules combo<br> id odio turpis pharetrum elementum
             Rules combo id odio turpis pharetrum elementum
-        </h3>
+        </div>
         <div class="wrapper">
             <div class="team__wrapper">
                 <img src="./img/section__team/2.png" alt="">
@@ -92,6 +92,72 @@
         </div>
     </section>
     <!--section__team end-->
+
+    <!-- section_collections -->
+    <section class="section__collections">
+        <div class="nft_h2">Hottest Collections</div>
+        <div class="nft_h3">Rules combo id odio turpis pharetrum elementum
+            Rules combo id odio turpis pharetrum elementum
+            Rules combo<br> id odio turpis pharetrum elementum
+            Rules combo id odio turpis pharetrum elementum</div>
+
+        <div class="wrapper">
+            <div class="collection__wrapper">
+                <img src="/img/section__collection/1.png" alt="">
+                <p>Moonbirds</p>
+                <span>Faucibus odio elementum nulla venenatis, libero. Ullamcorper duis fringilla pulvinar nibh diam sit.</span>
+            </div>
+
+            <div class="collection__wrapper">
+                <img src="/img/section__collection/2.png" alt="">
+                <p>Clone X - X Takashi Murakami</p>
+                <span>Magna in condimentum praesent pretium vitae mattis facilisis nunc. Lectus in ac ac.</span>
+            </div>
+
+            <div class="collection__wrapper">
+                <img src="/img/section__collection/3.png" alt="">
+                <p>Mutant Ape Yacht Club</p>
+                <span>Sit aenean porttitor sit lectus. Adipiscing egestas etiam eget cursus nulla risus euismod. Netus.</span>
+            </div>
+
+            <div class="collection__wrapper">
+                <img src="/img/section__collection/4.png" alt="">
+                <p>"MOAR" by Joan Cornella</p>
+                <span>Faucibus odio elementum nulla venenatis, libero. Ullamcorper duis fringilla pulvinar nibh diam sit.</span>
+            </div>
+
+            <div class="collection__wrapper">
+                <img src="/img/section__collection/5.png" alt="">
+                <p>Doodles</p>
+                <span>Magna in condimentum praesent pretium vitae mattis facilisis nunc. Lectus in ac ac.</span>
+            </div>
+
+            <div class="collection__wrapper">
+                <img src="/img/section__collection/6.png" alt="">
+                <p>KIWAMI Genesis</p>
+                <span>Sit aenean porttitor sit lectus. Adipiscing egestas etiam eget cursus nulla risus euismod. Netus.</span>
+            </div>
+
+            <div class="collection__wrapper">
+                <img src="/img/section__collection/7.png" alt="">
+                <p>Arcade Land</p>
+                <span>Faucibus odio elementum nulla venenatis, libero. Ullamcorper duis fringilla pulvinar nibh diam sit.</span>
+            </div>
+
+            <div class="collection__wrapper">
+                <img src="/img/section__collection/8.png" alt="">
+                <p>Goons of Balatroon</p>
+                <span>Magna in condimentum praesent pretium vitae mattis facilisis nunc. Lectus in ac ac.</span>
+            </div>
+
+            <div class="collection__wrapper">
+                <img src="/img/section__collection/9.png" alt="">
+                <p>Meta Toy DragonZ</p>
+                <span>Sit aenean porttitor sit lectus. Adipiscing egestas etiam eget cursus nulla risus euismod. Netus.</span>
+            </div>
+        </div>
+    </section>
+    <!-- section_collecions -->
 
      
 </body>
